Refine password reset email template with updated styles and content
- Enhanced the CSS for better alignment and responsiveness across devices, including new styles for text alignment and font sizes.
- Updated the email content structure, replacing the header text with a more prominent title and adjusting the verification code display for clarity.
- Improved image links for better visual consistency and updated layout elements to enhance user experience.

These changes aim to create a more visually appealing and user-friendly password reset email.

--- a/src/templates/forgot-password.ejs
+++ b/src/templates/forgot-password.ejs
@@ -146,6 +146,19 @@
   <style type="text/css">
     @media (max-width: 480px) {
 
+      .t44,
+      .t46 {
+        mso-text-raise: 8px !important
+      }
+
+      .t102,
+      .t24,
+      .t27,
+      .t78,
+      .t99 {
+        text-align: center !important
+      }
+
       .t112,
       .t117 {
         mso-line-height-alt: 0px !important;
@@ -156,7 +169,9 @@
       .t100,
       .t24,
       .t25,
-      .t79 {
+      .t78,
+      .t79,
+      .t99 {
         display: block !important
       }
 
@@ -168,27 +183,13 @@
         border-radius: 0 !important
       }
 
-      .t38 {
-        font-size: 24px !important;
-        mso-text-raise: 1px !important
-      }
-
-      .t44,
-      .t46 {
-        mso-text-raise: 8px !important
-      }
-
       .t45 {
-        mso-line-height-alt: 40px !important;
-        line-height: 40px !important
+        mso-line-height-alt: 25px !important;
+        line-height: 25px !important
       }
 
       .t44 {
         font-size: 15px !important
-      }
-
-      .t24 {
-        text-align: left !important
       }
 
       .t14,
@@ -198,14 +199,8 @@
         width: 100% !important
       }
 
-      .t102,
-      .t78,
-      .t99 {
-        text-align: center !important
-      }
-
       .t23 {
-        max-width: 303px !important
+        max-width: 412px !important
       }
 
       .t14 {
@@ -223,11 +218,6 @@
       .t96 {
         padding-left: 30px !important;
         padding-right: 30px !important
-      }
-
-      .t78,
-      .t99 {
-        display: block !important
       }
 
       .t69,
@@ -266,6 +256,11 @@
 
       .t98 {
         max-width: 258px !important
+      }
+
+      .t32 {
+        font-size: 24px !important;
+        mso-text-raise: 1px !important
       }
     }
   </style>
@@ -363,7 +358,7 @@
                                                                                     style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;"
                                                                                     width=100 height=16.9811320754717
                                                                                     alt=""
-                                                                                    src="https://e94413d0-8d7f-4050-80bd-26048cc48c11.b-cdn.net/e/00bcf147-35f9-45d8-977d-3fc4765bcd93/25becbc8-9b8c-406e-b7af-1a1ded12e5ff.png" /></a>
+                                                                                    src="https://33e0908c-124b-4607-aa05-068c5267568c.b-cdn.net/e/8d756f96-888a-4e30-8089-a1c83e934cfb/e57c9ce2-926d-49d4-96d8-b79d355a4a11.png" /></a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -438,7 +433,7 @@
                                                                                   target=_blank><img class=t15
                                                                                     style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;"
                                                                                     width=129 height=92.88 alt=""
-                                                                                    src="https://e94413d0-8d7f-4050-80bd-26048cc48c11.b-cdn.net/e/00bcf147-35f9-45d8-977d-3fc4765bcd93/3e92a4e0-d55d-4a02-b630-e3e576b393a1.png" /></a>
+                                                                                    src="https://33e0908c-124b-4607-aa05-068c5267568c.b-cdn.net/e/8d756f96-888a-4e30-8089-a1c83e934cfb/e41240b3-a1c6-4230-ab5d-04eb8f35b7ad.png" /></a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -468,7 +463,7 @@
                               <tr>
                                 <td>
                                   <div class=t33
-                                    style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:30px;line-height:30px;font-size:1px;display:block;">
                                     &nbsp;&nbsp;</div>
                                 </td>
                               </tr>
@@ -477,16 +472,14 @@
                                   <table class=t37 role=presentation cellpadding=0 cellspacing=0
                                     style="Margin-left:auto;Margin-right:auto;">
                                     <tr>
-                                      <td width=446 class=t36 style="width:446px;">
+                                      <td width=350 class=t36 style="width:350px;">
                                         <table class=t35 role=presentation cellpadding=0 cellspacing=0 width=100%
                                           style="width:100%;">
                                           <tr>
                                             <td class=t34>
-                                              <p class=t32
-                                                style="margin:0;Margin:0;font-family:Inter,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear Dr. [Name],<br />We received a request to reset your Sendscript
-                                                account password.<br />Please use the following Verification Code to
-                                                proceed:</p>
+                                              <h1 class=t32
+                                                style="margin:0;Margin:0;font-family:Inter,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Reset Your Sendscript Password</h1>
                                             </td>
                                           </tr>
                                         </table>
@@ -498,7 +491,7 @@
                               <tr>
                                 <td>
                                   <div class=t39
-                                    style="mso-line-height-rule:exactly;mso-line-height-alt:30px;line-height:30px;font-size:1px;display:block;">
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
                                     &nbsp;&nbsp;</div>
                                 </td>
                               </tr>
@@ -507,14 +500,16 @@
                                   <table class=t43 role=presentation cellpadding=0 cellspacing=0
                                     style="Margin-left:auto;Margin-right:auto;">
                                     <tr>
-                                      <td width=350 class=t42 style="width:350px;">
+                                      <td width=446 class=t42 style="width:446px;">
                                         <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
                                           style="width:100%;">
                                           <tr>
                                             <td class=t40>
-                                              <h1 class=t38
-                                                style="margin:0;Margin:0;font-family:Inter,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#111111;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Reset Your Sendscript Password</h1>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Inter,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Dear Dr. <%= doctor_name %>,<br />We received a request to reset your Sendscript
+                                                account password.<br />Please use the following Verification Code to
+                                                proceed:</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -543,8 +538,7 @@
                                               style="overflow:hidden;background-color:#1B3F6D;text-align:center;line-height:40px;mso-line-height-rule:exactly;mso-text-raise:5px;border-radius:6px 6px 6px 6px;">
                                               <a class=t44 href="#"
                                                 style="display:block;margin:0;Margin:0;font-family:Inter,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:40px;font-weight:700;font-style:normal;font-size:24px;text-decoration:none;letter-spacing:-0.5px;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:5px;"
-                                                target=_blank>1 2 3 4 5 6&nbsp;</a>
-                                            </td>
+                                                target=_blank><%= otp %>&nbsp;</a></td>
                                           </tr>
                                         </table>
                                       </td>
