Update doctor super admin approval email template for personalization
- Modified the greeting in the doctor super admin approval email template to address the recipient by their name only, removing the title "Dr." for a more personalized touch.
- This change aims to enhance user engagement and create a more welcoming communication experience for new doctors.

--- a/src/templates/doctor-super-admin-approval.ejs
+++ b/src/templates/doctor-super-admin-approval.ejs
@@ -504,7 +504,7 @@
                                             <td class=t40>
                                               <p class=t38
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear Dr. <%= doctor_name %>,<br />Congratulations! Your account
+                                                Dear <%= doctor_name %>,<br />Congratulations! Your account
                                                   verification with the SendScript Doctor Panel has been successfully
                                                   approved.
                                                   <br />You can now log in and start managing your patients efficiently
