Refactor clinic registration approved email template for improved content and styling
- Updated the clinic registration approved email template to enhance the clarity and positivity of the message, informing users of their successful registration.
- Adjusted CSS classes for better responsiveness and visual consistency across devices.
- Improved overall structure and styling to create a more engaging user experience.

These changes aim to streamline communication and enhance user satisfaction during the clinic registration process.

--- a/src/templates/doctor-account-creation.ejs
+++ b/src/templates/doctor-account-creation.ejs
@@ -623,7 +623,7 @@
                                             <td class=t59>
                                               <p class=t57
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                This Code will expire in 10 minutes. If you didn&rsquo;t request this,
+                                                This code will expire in 10 minutes. If you didn&rsquo;t request this,
                                                 please ignore this email.</p>
                                             </td>
                                           </tr>
