Update email templates to reflect trademark ownership and improve content clarity
- Replaced the copyright notice with a statement indicating that the trademark belongs to Msmb Healthcare Limited across multiple email templates.
- Enhanced the content in the clinic registration approved email template for improved clarity and positivity, emphasizing successful registration.
- Adjusted the header in the doctor invite email template for a more concise message.

These changes aim to ensure accurate branding and enhance user communication across various email notifications.

--- a/src/templates/forgot-password.ejs
+++ b/src/templates/forgot-password.ejs
@@ -763,10 +763,9 @@
                                                                             <tr>
                                                                               <td class=t88
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t86
-                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  &copy; 2025 SendScript, Inc. All
-                                                                                  Rights Reserved.</p>
+                                                                                <p class=t85
+                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;"> <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span> is a registered trademark of Msmb Healthcare Limited.
+                                                                                </p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
