--- a/src/templates/clinic-registration-approved.ejs
+++ b/src/templates/clinic-registration-approved.ejs
@@ -469,7 +469,7 @@
                                             <td class=t34>
                                               <h1 class=t32
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Clinic Registration Approved – Welcome to Sendscript</h1>
+                                                Clinic Registration Approved</h1>
                                             </td>
                                           </tr>
                                         </table>
@@ -525,7 +525,7 @@
                                             <td class=t46>
                                               <p class=t44
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                We are pleased to inform you that your clinic registration has been approved.</p>
+                                                We are pleased to inform you that your clinic registration has been successfully approved.</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -553,7 +553,7 @@
                                             <td class=t52>
                                               <p class=t50
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Your clinic is now officially registered on the Sendscript platform. You can begin managing your clinic.</p>
+                                                Your clinic is now officially listed on the Sendscript platform, and you may begin managing your clinic&rsquo;s operations seamlessly through our system.</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -581,7 +581,7 @@
                                             <td class=t58>
                                               <p class=t56
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Thank you for choosing Sendscript – We&rsquo;re excited to support your journey toward smarter and connected care.</p>
+                                                Thank you for choosing Sendscript. We look forward to supporting you in delivering smarter, more connected care.</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -762,10 +762,9 @@
                                                                             <tr>
                                                                               <td class=t93
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <p class=t91
-                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  &copy; 2025 SendScript, Inc. All
-                                                                                  Rights Reserved.</p>
+                                                                                <p class=t85
+                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;"> <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span> is a registered trademark of Msmb Healthcare Limited.
+                                                                                </p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
