--- a/src/templates/invite-doctor.ejs
+++ b/src/templates/invite-doctor.ejs
@@ -474,7 +474,7 @@
                                             <td class=t34>
                                               <h1 class=t32
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Doctor You&apos;ve Been Invited to Join Sendscript</h1>
+                                                You&apos;ve Been Invited to Join Sendscript</h1>
                                             </td>
                                           </tr>
                                         </table>
@@ -743,9 +743,8 @@
                                                                               <td class=t87
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
                                                                                 <p class=t85
-                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  &copy; 2025 SendScript, Inc. All
-                                                                                  Rights Reserved.</p>
+                                                                                  style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;"> <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span> is a registered trademark of Msmb Healthcare Limited.
+                                                                                </p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
