Update invite doctor email template to enhance button text personalization
- Replaced the static "Accept Invitation" text with a dynamic button text variable for improved personalization and flexibility in the invite doctor email template.
- This change aims to create a more engaging and tailored communication experience for new doctors joining the platform.

--- a/src/templates/invite-doctor.ejs
+++ b/src/templates/invite-doctor.ejs
@@ -536,7 +536,7 @@
                                               style="overflow:hidden;background-color:#032550;text-align:center;line-height:24px;mso-line-height-rule:exactly;mso-text-raise:3px;padding:6px 10px 6px 10px;border-radius:18px 18px 18px 18px;">
                                               <a class=t44 href="<%= accept_invitation_button_link %>"
                                                 style="display:block;margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:24px;font-weight:500;font-style:normal;font-size:15px;text-decoration:none;direction:ltr;color:#E3F0FF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;"
-                                                target=_blank>Accept Invitation</a>
+                                                target=_blank><%= button_text %></a>
                                             </td>
                                           </tr>
                                         </table>
