Refactor send-token email template for improved layout and styling
- Adjusted HTML structure for better readability and alignment, enhancing the overall user experience.
- Updated CSS classes and styles to ensure a more modern and responsive design.
- Included dynamic placeholders for personalized content, improving communication clarity for recipients.

--- a/src/templates/send-token.ejs
+++ b/src/templates/send-token.ejs
@@ -556,7 +556,8 @@
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 Your Prescription from
                                                                                                 <%= doctor_name %> is
-                                                                                                    Now Available</h1>
+                                                                                                    Now Available
+                                                                                            </h1>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -1024,20 +1025,54 @@
                                                             </tr>
                                                             <tr>
                                                                 <td align=center>
-                                                                    <table class=t122 role=presentation cellpadding=0
+                                                                    <table class=t85 role=presentation cellpadding=0
                                                                         cellspacing=0
                                                                         style="Margin-left:auto;Margin-right:auto;">
                                                                         <tr>
-                                                                            <td width=467 class=t121
-                                                                                style="width:467px;">
-                                                                                <table class=t120 role=presentation
+                                                                            <td width=464 class=t84
+                                                                                style="width:464px;">
+                                                                                <table class=t83 role=presentation
                                                                                     cellpadding=0 cellspacing=0
                                                                                     width=100% style="width:100%;">
                                                                                     <tr>
-                                                                                        <td class=t119>
-                                                                                            <p class=t117
+                                                                                        <td class=t82>
+                                                                                            <p class=t80
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                                                                Warm regards,</p>
+                                                                                                Warm regards,&nbsp;</p>
+                                                                                        </td>
+                                                                                    </tr>
+                                                                                </table>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table>
+                                                                </td>
+                                                            </tr>
+                                                            <!--[if !mso]>-->
+                                                            <tr>
+                                                                <td>
+                                                                    <div class=t87
+                                                                        style="mso-line-height-rule:exactly;font-size:1px;display:none;">
+                                                                        &nbsp;&nbsp;</div>
+                                                                </td>
+                                                            </tr>
+                                                            <!--<![endif]-->
+                                                            <tr>
+                                                                <td align=center>
+                                                                    <table class=t91 role=presentation cellpadding=0
+                                                                        cellspacing=0
+                                                                        style="Margin-left:auto;Margin-right:auto;">
+                                                                        <tr>
+                                                                            <td width=464 class=t90
+                                                                                style="width:464px;">
+                                                                                <table class=t89 role=presentation
+                                                                                    cellpadding=0 cellspacing=0
+                                                                                    width=100% style="width:100%;">
+                                                                                    <tr>
+                                                                                        <td class=t88>
+                                                                                            <p class=t86
+                                                                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                                                                <%= doctor_name %>
+                                                                                            </p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -1216,7 +1251,8 @@
                                                                                             <p class=t152
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
                                                                                                 sendscript
-                                                                                                <span style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span>
+                                                                                                <span
+                                                                                                    style="font-family: 'Poppins', sans-serif; font-size: 10px; font-weight: 500; line-height: 18px; text-decoration: none; text-transform: none; direction: ltr; color: #777777; text-align: center; mso-line-height-rule: exactly; mso-text-raise: 2px;">&#174;</span>
                                                                                                 is
                                                                                                 a
                                                                                                 registered
